# HopBridge

./: .gitignore  Dockerfile  Dockerfile.contract  Dockerfile.etherscan  Dockerfile.web  README.md  commands  commands.txt  container_check  contracts.json  etherscan.json  etherscan.py  hop_contract.json  hop_contract.py  hop_etherscan.json  hop_etherscan.py  hop_rainbow.py  hop_web.json  hop_web.py  input.json  main.py  pyproject.toml  scan_contract.json  scan_contract.py  web.json  web.py
docker_files/: Dockerfile.contract  Dockerfile.etherscan  Dockerfile.rainbow  Dockerfile.web
scripts/: commands.txt
src/hopbridge/: exceptions.py  interface.py  logger.py  message.py  price_query.py  variables.py
src/hopbridge/blockchain/: evm.py  helpers.py  interface.py
src/hopbridge/common/: exceptions.py  logger.py  message.py
src/hopbridge/driver/: driver.py  options.py
src/hopbridge/evm_scanner/: helpers.py
src/hopbridge/web/: helpers.py  price_query.py
