[tool.poetry]
name = "HopBridge"
version = "0.2.0"
description = ""
authors = ["IK <ivandkyulev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
web3 = "^5.29.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
