[tool.poetry]
name = "HopBridge"
version = "0.3.0"
description = ""
authors = ["IK <ivandkyulev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
selenium = "^4.11.2"
python-dotenv = "^1.0.0"
web3 = "^6.8.0"
webdriver-manager = "^4.0.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
